--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -123,11 +123,11 @@ for alphabets in which this is possible.
 
 \subsection{Braces}
 
-\scm{\jump}{Double square braces}{$\jumpi{\VA}$} % maybe use rrbracket-llbracket from stmaryd?
+\scm{\jump}{Double square braces}{$\jump{\VA}$} % maybe use rrbracket-llbracket from stmaryd?
 \scm{\rbr}{Round braces}{$\rbr{\VA}$}
 \scm{\sbr}{Square brackets}{$\sbr{\VA}$}
 \scm{\cbr}{Curly braces}{$\cbr{\VA}$}
-\scm{\ave}{Amgles}{$\rbr{\VA}$}
+\scm{\ave}{Angles}{$\ave{\VA}$}
 
 \subsection{Operators}
 
