--- a/lazyeqn.sty
+++ b/lazyeqn.sty
@@ -64,6 +64,47 @@
 % These are designed to minimize the number of keystrokes while
 % writing equations
 
+% Bold Greek
+\newcommand{\Balpha  }{\ensuremath \boldsymbol \alpha      \xspace}
+\newcommand{\Bbeta   }{\ensuremath \boldsymbol \beta       \xspace}
+\newcommand{\Bgamma  }{\ensuremath \boldsymbol \gamma      \xspace}
+\newcommand{\Bdelta  }{\ensuremath \boldsymbol \delta      \xspace}
+\newcommand{\Bepsilon}{\ensuremath \boldsymbol \epsilon    \xspace}
+\newcommand{\Bvareps }{\ensuremath \boldsymbol \varepsilon \xspace}
+\newcommand{\Bzeta   }{\ensuremath \boldsymbol \zeta       \xspace}
+\newcommand{\Beta    }{\ensuremath \boldsymbol \eta        \xspace}
+\newcommand{\Btheta  }{\ensuremath \boldsymbol \theta      \xspace}
+\newcommand{\Bvarthe }{\ensuremath \boldsymbol \vartheta   \xspace}
+\newcommand{\Biota   }{\ensuremath \boldsymbol \iota       \xspace}
+\newcommand{\Bkappa  }{\ensuremath \boldsymbol \kappa      \xspace}
+\newcommand{\Blambda }{\ensuremath \boldsymbol \lambda     \xspace}
+\newcommand{\Bmu     }{\ensuremath \boldsymbol \mu         \xspace}
+\newcommand{\Bnu     }{\ensuremath \boldsymbol \nu         \xspace}
+\newcommand{\Bxi     }{\ensuremath \boldsymbol \xi         \xspace}
+\newcommand{\Bpi     }{\ensuremath \boldsymbol \pi         \xspace}
+\newcommand{\Brho    }{\ensuremath \boldsymbol \rho        \xspace}
+\newcommand{\Bvrho   }{\ensuremath \boldsymbol \varrho     \xspace}
+\newcommand{\Bsigma  }{\ensuremath \boldsymbol \sigma      \xspace}
+\newcommand{\Bvsigma }{\ensuremath \boldsymbol \varsigma   \xspace}
+\newcommand{\Btau    }{\ensuremath \boldsymbol \tau        \xspace}
+\newcommand{\Bupsilon}{\ensuremath \boldsymbol \upsilon    \xspace}
+\newcommand{\Bphi    }{\ensuremath \boldsymbol \phi        \xspace}
+\newcommand{\Bvarphi }{\ensuremath \boldsymbol \varphi     \xspace}
+\newcommand{\Bchi    }{\ensuremath \boldsymbol \chi        \xspace}
+\newcommand{\Bpsi    }{\ensuremath \boldsymbol \psi        \xspace}
+\newcommand{\Bomega  }{\ensuremath \boldsymbol \omega      \xspace}
+\newcommand{\BGamma  }{\ensuremath \boldsymbol \Gamma      \xspace}
+\newcommand{\BDelta  }{\ensuremath \boldsymbol \Delta      \xspace}
+\newcommand{\BTheta  }{\ensuremath \boldsymbol \Theta      \xspace}
+\newcommand{\BLambda }{\ensuremath \boldsymbol \Lambda     \xspace}
+\newcommand{\BXi     }{\ensuremath \boldsymbol \Xi         \xspace}
+\newcommand{\BPi     }{\ensuremath \boldsymbol \Pi         \xspace}
+\newcommand{\BSigma  }{\ensuremath \boldsymbol \Sigma      \xspace}
+\newcommand{\BUpsilon}{\ensuremath \boldsymbol \Upsilon    \xspace}
+\newcommand{\BPhi    }{\ensuremath \boldsymbol \Phi        \xspace}
+\newcommand{\BPsi    }{\ensuremath \boldsymbol \Psi        \xspace}
+\newcommand{\BOmega  }{\ensuremath \boldsymbol \Omega      \xspace}
+
 % Roman (upright) Latin
 \newcommand{\Ua}{\ensuremath{\mathrm{a}}\xspace}
 \newcommand{\Ub}{\ensuremath{\mathrm{b}}\xspace}
@@ -118,47 +159,6 @@
 \newcommand{\UY}{\ensuremath{\mathrm{Y}}\xspace}
 \newcommand{\UZ}{\ensuremath{\mathrm{Z}}\xspace}
 
-% Bold Greek
-\newcommand{\Balpha  }{\ensuremath \boldsymbol \alpha      \xspace}
-\newcommand{\Bbeta   }{\ensuremath \boldsymbol \beta       \xspace}
-\newcommand{\Bgamma  }{\ensuremath \boldsymbol \gamma      \xspace}
-\newcommand{\Bdelta  }{\ensuremath \boldsymbol \delta      \xspace}
-\newcommand{\Bepsilon}{\ensuremath \boldsymbol \epsilon    \xspace}
-\newcommand{\Bvareps }{\ensuremath \boldsymbol \varepsilon \xspace}
-\newcommand{\Bzeta   }{\ensuremath \boldsymbol \zeta       \xspace}
-\newcommand{\Beta    }{\ensuremath \boldsymbol \eta        \xspace}
-\newcommand{\Btheta  }{\ensuremath \boldsymbol \theta      \xspace}
-\newcommand{\Bvarthe }{\ensuremath \boldsymbol \vartheta   \xspace}
-\newcommand{\Biota   }{\ensuremath \boldsymbol \iota       \xspace}
-\newcommand{\Bkappa  }{\ensuremath \boldsymbol \kappa      \xspace}
-\newcommand{\Blambda }{\ensuremath \boldsymbol \lambda     \xspace}
-\newcommand{\Bmu     }{\ensuremath \boldsymbol \mu         \xspace}
-\newcommand{\Bnu     }{\ensuremath \boldsymbol \nu         \xspace}
-\newcommand{\Bxi     }{\ensuremath \boldsymbol \xi         \xspace}
-\newcommand{\Bpi     }{\ensuremath \boldsymbol \pi         \xspace}
-\newcommand{\Brho    }{\ensuremath \boldsymbol \rho        \xspace}
-\newcommand{\Bvrho   }{\ensuremath \boldsymbol \varrho     \xspace}
-\newcommand{\Bsigma  }{\ensuremath \boldsymbol \sigma      \xspace}
-\newcommand{\Bvsigma }{\ensuremath \boldsymbol \varsigma   \xspace}
-\newcommand{\Btau    }{\ensuremath \boldsymbol \tau        \xspace}
-\newcommand{\Bupsilon}{\ensuremath \boldsymbol \upsilon    \xspace}
-\newcommand{\Bphi    }{\ensuremath \boldsymbol \phi        \xspace}
-\newcommand{\Bvarphi }{\ensuremath \boldsymbol \varphi     \xspace}
-\newcommand{\Bchi    }{\ensuremath \boldsymbol \chi        \xspace}
-\newcommand{\Bpsi    }{\ensuremath \boldsymbol \psi        \xspace}
-\newcommand{\Bomega  }{\ensuremath \boldsymbol \omega      \xspace}
-\newcommand{\BGamma  }{\ensuremath \boldsymbol \Gamma      \xspace}
-\newcommand{\BDelta  }{\ensuremath \boldsymbol \Delta      \xspace}
-\newcommand{\BTheta  }{\ensuremath \boldsymbol \Theta      \xspace}
-\newcommand{\BLambda }{\ensuremath \boldsymbol \Lambda     \xspace}
-\newcommand{\BXi     }{\ensuremath \boldsymbol \Xi         \xspace}
-\newcommand{\BPi     }{\ensuremath \boldsymbol \Pi         \xspace}
-\newcommand{\BSigma  }{\ensuremath \boldsymbol \Sigma      \xspace}
-\newcommand{\BUpsilon}{\ensuremath \boldsymbol \Upsilon    \xspace}
-\newcommand{\BPhi    }{\ensuremath \boldsymbol \Phi        \xspace}
-\newcommand{\BPsi    }{\ensuremath \boldsymbol \Psi        \xspace}
-\newcommand{\BOmega  }{\ensuremath \boldsymbol \Omega      \xspace}
-
 % Bold italic letters
 \newcommand{\BA}{{\boldsymbol{\mathnormal A}}}
 \newcommand{\BB}{{\boldsymbol{\mathnormal B}}}
@@ -187,14 +187,14 @@
 \newcommand{\BY}{{\boldsymbol{\mathnormal Y}}}
 \newcommand{\BZ}{{\boldsymbol{\mathnormal Z}}}
 \newcommand{\Ba}{{\boldsymbol{\mathnormal a}}}
-\newcommand{\bB}{{\boldsymbol{\mathnormal b}}}
+\newcommand{\Bb}{{\boldsymbol{\mathnormal b}}}
 \newcommand{\Bc}{{\boldsymbol{\mathnormal c}}}
 \newcommand{\Bd}{{\boldsymbol{\mathnormal d}}}
 \newcommand{\Be}{{\boldsymbol{\mathnormal e}}}
 \newcommand{\Bf}{{\boldsymbol{\mathnormal f}}}
 \newcommand{\Bg}{{\boldsymbol{\mathnormal g}}}
 \newcommand{\Bh}{{\boldsymbol{\mathnormal h}}}
-\newcommand{\iB}{{\boldsymbol{\mathnormal i}}}
+\newcommand{\Bi}{{\boldsymbol{\mathnormal i}}}
 \newcommand{\Bj}{{\boldsymbol{\mathnormal j}}}
 \newcommand{\Bk}{{\boldsymbol{\mathnormal k}}}
 \newcommand{\Bl}{{\boldsymbol{\mathnormal l}}}
@@ -889,52 +889,44 @@
 \newcommand{\IIeight}{{\bboldbbold 8}}
 \newcommand{\IInine }{{\bboldbbold 9}}
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Macros for easy bracket handling %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\newcommand{\jump}{\jumpi}              % [[ ... ]]
-\newcommand{\sbr}[1]{\left[#1\right]}   % Square BRackets
-\newcommand{\rbr}[1]{\left(#1\right)}   % Round  BRackets
-\newcommand{\cbr}[1]{\left\{#1\right\}} % Curly  BRackets
-\newcommand{\ave}[1]{\left\langle\mkern1mu #1\mkern1mu\right\rangle}    % < ... >
-\def\jumpi#1{%
+% Macros for easy bracket handling
+\newcommand{\sbr}[1]{\left[#1\right]}
+\newcommand{\rbr}[1]{\left(#1\right)}
+\newcommand{\cbr}[1]{\left\{#1\right\}}
+\newcommand{\ave}[1]{\left\langle\mkern1mu #1\mkern1mu\right\rangle}
+\def\jump#1{%
    \setbox8\hbox{$\left[\llap{$#1$}\right[$}%
    \left[\kern-0.3\wd8\left[#1\right]\kern-0.3\wd8\right]%
 }
 
 % Mathematical operators
-\newcommand{\variation}[2]{\frac{\delta #1}{\delta #2}} % variation shorthand
-\newcommand{\partd}[2]{\frac{\partial #1}{\partial #2}} % partial derivative
-\newcommand{\partdrb}[2]{\frac{\partial}{\partial #2}\rbr{#1}} % partial
-\newcommand{\partdsb}[2]{\frac{\partial}{\partial #2}\sbr{#1}} % partial
-\newcommand{\cpartd}[2]{\cfrac{\partial #1}{\partial #2}} % partial derivative
-                                % derivative where the first operand is in
-                                % separate brackets
-% \newcommand{\partdd}[2]{\frac{\partial^2 #1}{\partial #2}} % double partial derivative
-\newcommand{\deriv}[2]{\frac{\mathrm{d} #1}{\mathrm{d} #2}} % derivative
-\newcommand{\assem}{\mathsf{A}} % assembly symbol
-%\newcommand{\assem}{\mathlarger{\mathlarger{\mathlarger{\mathsf{A}}}}} % assembly symbol
-\newcommand{\evat}{\bigg|} % evaluate at
-\newcommand{\degree}{\ensuremath{^{\circ}}\xspace} % degree symbol
+\newcommand{\variation}[2]{\frac{\delta #1}{\delta #2}}
+\newcommand{\partd}[2]{\frac{\partial #1}{\partial #2}}
+\newcommand{\partdrb}[2]{\frac{\partial}{\partial #2}\rbr{#1}}
+\newcommand{\partdsb}[2]{\frac{\partial}{\partial #2}\sbr{#1}}
+\newcommand{\cpartd}[2]{\cfrac{\partial #1}{\partial #2}}
+\newcommand{\deriv}[2]{\frac{\mathrm{d} #1}{\mathrm{d} #2}}
+\newcommand{\assem}{\mathsf{A}}
+%\newcommand{\assem}{\mathlarger{\mathlarger{\mathlarger{\mathsf{A}}}}}
+\newcommand{\evat}{\bigg|}
+\newcommand{\degree}{\ensuremath{^{\circ}}\xspace}
 
 % Special fractions and roots
-\newcommand{\half}{{\textstyle\mthin\frac{1}{2}\mthin}}              % 1/2
-\newcommand{\third}{{\textstyle\mthin\frac{1}{3}\mthin}}             % 1/3
-\newcommand{\fourth}{{\textstyle\mthin\frac{1}{4}\mthin}}            % 1/4
-\newcommand{\fifth}{{\textstyle\mthin\frac{1}{5}\mthin}}             % 1/5
-\newcommand{\sixth}{{\textstyle\mthin\frac{1}{6}\mthin}}             % 1/6
-\newcommand{\seventh}{{\textstyle\mthin\frac{1}{7}\mthin}}           % 1/7
-\newcommand{\eighth}{{\textstyle\mthin\frac{1}{8}\mthin}}            % 1/8
-\newcommand{\ninth}{{\textstyle\mthin\frac{1}{9}\mthin}}             % 1/9
-\newcommand{\tenth}{{\textstyle\mthin\frac{1}{10}\mthin}}            % 1/10
-\newcommand{\twothree}{{\textstyle\mthin\frac{2}{3}\mthin}}          % 2/3
-\newcommand{\threetwo}{{\textstyle\mthin\frac{3}{2}\mthin}}          % 3/2
-\newcommand{\sqonetwo}{{\textstyle\mthin\sqrt{\frac{1}{2}}\mthin}}   % sqrt(1/2)
-\newcommand{\sqonethree}{{\textstyle\mthin\sqrt{\frac{1}{3}}\mthin}} % sqrt(1/3)
-\newcommand{\sqtwothree}{{\textstyle\mthin\sqrt{\frac{2}{3}}\mthin}} % sqrt(2/3)
-\newcommand{\sqthreetwo}{{\textstyle\mthin\sqrt{\frac{3}{2}}\mthin}} % sqrt(3/2)
+\newcommand{\half}{{\textstyle\mthin\frac{1}{2}\mthin}}
+\newcommand{\third}{{\textstyle\mthin\frac{1}{3}\mthin}}
+\newcommand{\fourth}{{\textstyle\mthin\frac{1}{4}\mthin}}
+\newcommand{\fifth}{{\textstyle\mthin\frac{1}{5}\mthin}}
+\newcommand{\sixth}{{\textstyle\mthin\frac{1}{6}\mthin}}
+\newcommand{\seventh}{{\textstyle\mthin\frac{1}{7}\mthin}}
+\newcommand{\eighth}{{\textstyle\mthin\frac{1}{8}\mthin}}
+\newcommand{\ninth}{{\textstyle\mthin\frac{1}{9}\mthin}}
+\newcommand{\tenth}{{\textstyle\mthin\frac{1}{10}\mthin}}
+\newcommand{\twothree}{{\textstyle\mthin\frac{2}{3}\mthin}}
+\newcommand{\threetwo}{{\textstyle\mthin\frac{3}{2}\mthin}}
+\newcommand{\sqonetwo}{{\textstyle\mthin\sqrt{\frac{1}{2}}\mthin}}
+\newcommand{\sqonethree}{{\textstyle\mthin\sqrt{\frac{1}{3}}\mthin}}
+\newcommand{\sqtwothree}{{\textstyle\mthin\sqrt{\frac{2}{3}}\mthin}}
+\newcommand{\sqthreetwo}{{\textstyle\mthin\sqrt{\frac{3}{2}}\mthin}}
 \def\mthin{\mkern\thinmuskip}
 
 % \DeclareRobustCommand*{\cal}{\@fontswitch{\relax}{\mathcal}}
@@ -949,57 +941,57 @@
 % }
 
 \makeatletter
-\newcommand{\linedot}[1]{\dot{\overline{#1}}}                 % dot time derivative with line
-\newcommand{\DIV}{\mathop{\operator@font DIV}}                % DIV
-\newcommand{\Div}{\mathop{\operator@font Div}}                % Div
-\renewcommand{\div}{\mathop{\operator@font div}}              % div
-\newcommand{\curl}{{\mathop{\operator@font curl}}}            % curl
-\newcommand{\rot}{{\mathop{\operator@font rot}}}              % rotation
-\newcommand{\proj}{{\mathop{\operator@font proj}}}            % projection
-\newcommand{\sign}{{\mathop{\operator@font sign}}}            % sign
-\newcommand{\unit}{{\mathop{\operator@font unit}}}            % unit
-\renewcommand{\arg}{\mathop{\operator@font arg}}              % arg
-\newcommand{\Arg}{\mathop{\operator@font Arg}}                % Arg
-\newcommand{\sym}{\mathop{\operator@font sym}}                % sym
-\newcommand{\TR}{\mathop{\operator@font TR}}                  % TR
-\newcommand{\tr}{\mathop{\operator@font tr}}                  % tr
-\newcommand{\trial}{\mathop{\operator@font trial}}            % trial
-\newcommand{\DEV}{\mathop{\operator@font DEV}}                % DEV
-\newcommand{\dev}{\mathop{\operator@font dev}}                % dev
-\newcommand{\GRAD}{\mathop{\operator@font GRAD}}              % GRAD
-\newcommand{\Grad}{\mathop{\operator@font Grad}}              % Grad
-\newcommand{\grad}{\mathop{\operator@font grad}}              % grad
-\newcommand{\Lin}{\mathop{\operator@font Lin}}                % Lin
-\newcommand{\lin}{\mathop{\operator@font lin}}                % lin
-\newcommand{\skw}{\mathop{\operator@font skw}}               % skew
-\newcommand{\loc}{\mathop{\operator@font int}}                % int
-\newcommand{\cof}{\mathop{\operator@font cof}}                % cof
-\newcommand{\reac}{\mathop{\operator@font reac}}              % reac
-\newcommand{\pind}{\mathop{\operator@font pind}}              % pind
-\newcommand{\ndim}{\mathop{n_{\operator@font dim}}}           % dim
-\newcommand{\diag}{\mathop{\operator@font diag}}              % diag
-\newcommand{\veci}[1]{#1_1,\ldots,#1_n}                       % []_1,..,[]_n
-\newcommand{\dV}{\mkern\medmuskip dV}                         % dV
-\newcommand{\dA}{\mkern\medmuskip dA}                         % dA
-\newcommand{\dS}{\mkern\medmuskip dS}                         % dS
-\newcommand{\dx}{\mkern\medmuskip dx}                         % dx
-\newcommand{\jumpl}{\mathopen{[\mkern-2.5mu[}}                % [[
-\newcommand{\jumpr}{\mathclose{]\mkern-2.5mu]}}               % ]]
-\newcommand{\Abs}[1]{\left|#1\right|}                         % Betrag |#1|
-\newcommand{\Norm}[1]{\left\|#1\right\|}                      % Norm   ||#1||
-% \newcommand{\rve}{\textenv{$\cal RVE$}}                       % RVE
-% \newcommand{\rpg}{\textenv{$\cal RPG$}}                       % RPG
-% \newcommand{\ehs}{\textenv{$\cal EHS$}}                       % EHS
-% \newcommand{\so}{\textenv{$\cal SO$}}                         % SO
-% \newcommand{\mo}{\textenv{$\cal MO$}}                         % MO
-% \newcommand{\othree}{\textenv{$\cal O$\it(3)\/}}              % O(3)
-% \newcommand{\sothree}{\textenv{$\cal SO$\it(3)\/}}            % SO(3)
-% \newcommand{\slthree}{\textenv{$\cal S\mkern-1mu L$\it(3)\/}} % SL(3)
-% \newcommand{\AND}{\quad\textenv{and}\quad}                    % and
-% \newcommand{\WITH}{\quad\textenv{with}\quad}                  % with
-% \newcommand{\UND}{\quad\textenv{und}\quad}                    % und
-% \newcommand{\MIT}{\quad\textenv{mit}\quad}                    % mit
-% \newcommand{\com}{\quad\textenv{,}\quad}                      % ... , ...
+\newcommand{\linedot}[1]{\dot{\overline{#1}}}
+\newcommand{\DIV}{\mathop{\operator@font DIV}}
+\newcommand{\Div}{\mathop{\operator@font Div}}
+\renewcommand{\div}{\mathop{\operator@font div}}
+\newcommand{\curl}{{\mathop{\operator@font curl}}}
+\newcommand{\rot}{{\mathop{\operator@font rot}}}
+\newcommand{\proj}{{\mathop{\operator@font proj}}}
+\newcommand{\sign}{{\mathop{\operator@font sign}}}
+\newcommand{\unit}{{\mathop{\operator@font unit}}}
+\renewcommand{\arg}{\mathop{\operator@font arg}}
+\newcommand{\Arg}{\mathop{\operator@font Arg}}
+\newcommand{\sym}{\mathop{\operator@font sym}}
+\newcommand{\TR}{\mathop{\operator@font TR}}
+\newcommand{\tr}{\mathop{\operator@font tr}}
+\newcommand{\trial}{\mathop{\operator@font trial}}
+\newcommand{\DEV}{\mathop{\operator@font DEV}}
+\newcommand{\dev}{\mathop{\operator@font dev}}
+\newcommand{\GRAD}{\mathop{\operator@font GRAD}}
+\newcommand{\Grad}{\mathop{\operator@font Grad}}
+\newcommand{\grad}{\mathop{\operator@font grad}}
+\newcommand{\Lin}{\mathop{\operator@font Lin}}
+\newcommand{\lin}{\mathop{\operator@font lin}}
+\newcommand{\skw}{\mathop{\operator@font skw}}
+\newcommand{\loc}{\mathop{\operator@font int}}
+\newcommand{\cof}{\mathop{\operator@font cof}}
+\newcommand{\reac}{\mathop{\operator@font reac}}
+\newcommand{\pind}{\mathop{\operator@font pind}}
+\newcommand{\ndim}{\mathop{n_{\operator@font dim}}}
+\newcommand{\diag}{\mathop{\operator@font diag}}
+\newcommand{\veci}[1]{#1_1,\ldots,#1_n}
+\newcommand{\dV}{\mkern\medmuskip dV}
+\newcommand{\dA}{\mkern\medmuskip dA}
+\newcommand{\dS}{\mkern\medmuskip dS}
+\newcommand{\dx}{\mkern\medmuskip dx}
+\newcommand{\jumpl}{\mathopen{[\mkern-2.5mu[}}
+\newcommand{\jumpr}{\mathclose{]\mkern-2.5mu]}}
+\newcommand{\Abs}[1]{\left|#1\right|}
+\newcommand{\Norm}[1]{\left\|#1\right\|}
+% \newcommand{\rve}{\textenv{$\cal RVE$}}
+% \newcommand{\rpg}{\textenv{$\cal RPG$}}
+% \newcommand{\ehs}{\textenv{$\cal EHS$}}
+% \newcommand{\so}{\textenv{$\cal SO$}}
+% \newcommand{\mo}{\textenv{$\cal MO$}}
+% \newcommand{\othree}{\textenv{$\cal O$\it(3)\/}}
+% \newcommand{\sothree}{\textenv{$\cal SO$\it(3)\/}}
+% \newcommand{\slthree}{\textenv{$\cal S\mkern-1mu L$\it(3)\/}}
+% \newcommand{\AND}{\quad\textenv{and}\quad}
+% \newcommand{\WITH}{\quad\textenv{with}\quad}
+% \newcommand{\UND}{\quad\textenv{und}\quad}
+% \newcommand{\MIT}{\quad\textenv{mit}\quad}
+% \newcommand{\com}{\quad\textenv{,}\quad}
 \makeatother
 
 % transpose macros
@@ -1010,25 +1002,12 @@
 \def\tratop#1{^{\stackrel{#1}{\mathsf{T}}}} % \tratop[]
 \makeatother
 
-% \makeatletter
-% \newcommand{\tra}{\@ifnextchar[{\@@transpose}{\@ifnextchar({\@@@transpose}{\@transpose}}}
-% \def\@@@transpose(#1){^{\stackrel{#1}{\mathsf{T}}}}
-% \def\@@transpose[#1]{^{\mathsf{#1T}}}
-% \def\@transpose{^\mathsf{T}}
-% \makeatother
-
-% \newcommand{\tran}[1]{^{\stackrel{#1}{\mathsf{T}}}}
-
-%\def\@transpose#1{^{\stackrel{#1}{\mathsf{T}}}}
-
-
 % Following macros are borrowed from the package schule2e. Very useful
 % for typesetting row and column vectors easily.
 % Usage: \cvec{1;2;3;4}. The difference between \cvec and \vcvec (and
 % also \rvec and \vrvec are the type of brackets.
 
 \makeatletter
-
 \newcommand{\cvec}[2][r]{%
   \gdef\@VORNE{1}
   \left[\hskip-\arraycolsep%
@@ -1053,7 +1032,6 @@
   \fi}
 
 % Same as \cvec, but row vector
-
 \newcommand{\rvec}[2][r]{%
   \gdef\@VORNE{1}
   \left[\hskip-\arraycolsep%
@@ -1081,7 +1059,6 @@
 % Shortcut macro for vector bases
 % (e.g. e_i dyadic e_j dyadic ... and so on)
 % Usage: \basis[vector(default is bold e)]{indices}
-
 \makeatletter
 \def\basis{\@ifnextchar[\@basis%
         {\@basis[\Ve]}}
