--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -123,12 +123,13 @@ for alphabets in which this is possible.
 
 \subsection{Braces}
 
-\scm{\jump}{Double square braces}{$\jump{\VA}$} % maybe use rrbracket-llbracket from stmaryd?
 \scm{\rbr}{Round braces}{$\rbr{\VA}$}
 \scm{\sbr}{Square brackets}{$\sbr{\VA}$}
 \scm{\cbr}{Curly braces}{$\cbr{\VA}$}
-\scm{\ave}{Angles}{$\ave{\VA}$}
-
+\scm{\abr}{Angles}{$\abr{\VA}$}
+\scm{\dbr}{Double square braces}{$\dbr{\VA}$} % maybe use rrbracket-llbracket from stmaryd?
+\scm{\dbrl}{Left double square bracket}{$\dbrl$}
+\scm{\dbrr}{Right double square bracket}{$\dbrr$}
 \subsection{Operators}
 
 % \begin{table}[H]
@@ -191,27 +192,29 @@ for alphabets in which this is possible.
 \scm{\diag}{diag}{$\diag\VA$}
 \scm{\veci{}}{Indexed list representation}{$\veci{a}$}
 \scm{\dV}{Volume element}{$\dV$}
+\scm{\dv}{Volume element}{$\dv$}
 \scm{\dA}{Area element}{$\dA$}
+\scm{\da}{Area element}{$\da$}
 \scm{\dS}{Surface element}{$\dS$}
 \scm{\dx}{Line element}{$\dx$}
-% \scm{\jumpl}{}{$\jumpl$}
-% \scm{\jumpr}{}{$\jumpr$}
+\scm{\dt}{Time difference}{$\dt$}
 \scm{\Abs{}}{Absolute value}{$\Abs{\VA}$}
 \scm{\Norm{}}{Norm}{$\Norm{\VA}$}
 \scm{\basis{}}{Vector bases}{$\basis{ijkl}$}
-% \scm{\rve}{}{\rve}
+\scm{\rbdot}{Operands}{$\div\rbdot$}
+\scm{\ddt}{Time derivative}{$\ddt x$}
+\scm{\ddelt}{Partial Time derivative}{$\ddelt x$}
+\scm{\so}{Special orthogonal group}{$\so$}
+% \scm{\rve}{}{$\rve$}
 % \scm{\rpg}{}{$\rpg$}
 % \scm{\ehs}{}{$\ehs$}
-% \scm{\so}{}{$\so$}
 % \scm{\mo}{}{$\mo$}
-% \scm{\othree}{}{$\othree$}
-% \scm{\sothree}{}{$\sothree$}
-% \scm{\slthree}{}{$\slthree$}
-% \scm{\AND}{}{$\AND$}
-% \scm{\WITH}{}{$\WITH$}
-% \scm{\UND}{}{$\UND$}
-% \scm{\MIT}{}{$\MIT$}
-% \scm{\com}{}{$\com$}
+\scm{\othree}{Orthogonal group 3}{$\othree$}
+\scm{\sothree}{Special orthogonal group 3}{$\sothree$}
+\scm{\slthree}{Special linear group 3}{$\slthree$}
+\scm{\AND}{and between equations}{$a \AND b$}
+\scm{\WITH}{with between equations}{$a \WITH b$}
+\scm{\com}{Comma between equations}{$a\com b$}
 
 \subsection{Fractions and roots}
 \scm{\half}{Half}{$\half$}
