--- a/lazyeqn.sty
+++ b/lazyeqn.sty
@@ -2,7 +2,7 @@
 
 % Read the README and docs for descriptions.
 % provides useful macros for typesetting formulas.
-% (c) Onur Solmaz 2013
+% (c) Onur Solmaz 2014
 
 % xspace is required to ensure trailing spaces after macros, when used
 % without curly braces
@@ -71,6 +71,7 @@
 \newcommand{\Bdelta  }{\ensuremath \boldsymbol \delta      \xspace}
 \newcommand{\Bepsilon}{\ensuremath \boldsymbol \epsilon    \xspace}
 \newcommand{\Bvareps }{\ensuremath \boldsymbol \varepsilon \xspace}
+\newcommand{\Bvarepsilon}{\ensuremath \boldsymbol \varepsilon \xspace}
 \newcommand{\Bzeta   }{\ensuremath \boldsymbol \zeta       \xspace}
 \newcommand{\Beta    }{\ensuremath \boldsymbol \eta        \xspace}
 \newcommand{\Btheta  }{\ensuremath \boldsymbol \theta      \xspace}
@@ -893,18 +894,21 @@
 \newcommand{\sbr}[1]{\left[#1\right]}
 \newcommand{\rbr}[1]{\left(#1\right)}
 \newcommand{\cbr}[1]{\left\{#1\right\}}
-\newcommand{\ave}[1]{\left\langle\mkern1mu #1\mkern1mu\right\rangle}
-\def\jump#1{%
+\newcommand{\abr}[1]{\left\langle\mkern1mu #1\mkern1mu\right\rangle}
+\def\dbr#1{%
    \setbox8\hbox{$\left[\llap{$#1$}\right[$}%
    \left[\kern-0.3\wd8\left[#1\right]\kern-0.3\wd8\right]%
 }
 
+\newcommand{\rbdot}{\rbr{\cdot}}
 % Mathematical operators
 \newcommand{\variation}[2]{\frac{\delta #1}{\delta #2}}
 \newcommand{\partd}[2]{\frac{\partial #1}{\partial #2}}
 \newcommand{\partdrb}[2]{\frac{\partial}{\partial #2}\rbr{#1}}
 \newcommand{\partdsb}[2]{\frac{\partial}{\partial #2}\sbr{#1}}
 \newcommand{\cpartd}[2]{\cfrac{\partial #1}{\partial #2}}
+\newcommand{\ddt}{\frac{\Ud}{\Ud t}}
+\newcommand{\ddelt}{\frac{\partial}{\partial t}}
 \newcommand{\deriv}[2]{\frac{\mathrm{d} #1}{\mathrm{d} #2}}
 \newcommand{\assem}{\mathsf{A}}
 %\newcommand{\assem}{\mathlarger{\mathlarger{\mathlarger{\mathsf{A}}}}}
@@ -912,6 +916,23 @@
 \newcommand{\degree}{\ensuremath{^{\circ}}\xspace}
 
 % Special fractions and roots
+% \newcommand{\half}{{\mthin\frac{1}{2}\mthin}}
+% \newcommand{\third}{{\mthin\frac{1}{3}\mthin}}
+% \newcommand{\fourth}{{\mthin\frac{1}{4}\mthin}}
+% \newcommand{\fifth}{{\mthin\frac{1}{5}\mthin}}
+% \newcommand{\sixth}{{\mthin\frac{1}{6}\mthin}}
+% \newcommand{\seventh}{{\mthin\frac{1}{7}\mthin}}
+% \newcommand{\eighth}{{\mthin\frac{1}{8}\mthin}}
+% \newcommand{\ninth}{{\mthin\frac{1}{9}\mthin}}
+% \newcommand{\tenth}{{\mthin\frac{1}{10}\mthin}}
+% \newcommand{\twothree}{{\mthin\frac{2}{3}\mthin}}
+% \newcommand{\threetwo}{{\mthin\frac{3}{2}\mthin}}
+% \newcommand{\sqonetwo}{{\mthin\sqrt{\frac{1}{2}}\mthin}}
+% \newcommand{\sqonethree}{{\mthin\sqrt{\frac{1}{3}}\mthin}}
+% \newcommand{\sqtwothree}{{\mthin\sqrt{\frac{2}{3}}\mthin}}
+% \newcommand{\sqthreetwo}{{\mthin\sqrt{\frac{3}{2}}\mthin}}
+\def\mthin{\mkern\thinmuskip}
+
 \newcommand{\half}{{\textstyle\mthin\frac{1}{2}\mthin}}
 \newcommand{\third}{{\textstyle\mthin\frac{1}{3}\mthin}}
 \newcommand{\fourth}{{\textstyle\mthin\frac{1}{4}\mthin}}
@@ -927,18 +948,6 @@
 \newcommand{\sqonethree}{{\textstyle\mthin\sqrt{\frac{1}{3}}\mthin}}
 \newcommand{\sqtwothree}{{\textstyle\mthin\sqrt{\frac{2}{3}}\mthin}}
 \newcommand{\sqthreetwo}{{\textstyle\mthin\sqrt{\frac{3}{2}}\mthin}}
-\def\mthin{\mkern\thinmuskip}
-
-% \DeclareRobustCommand*{\cal}{\@fontswitch{\relax}{\mathcal}}
-% \newcommand{\textenv}{%
-%   \ifmmode%
-%      \expandafter%
-%      \math@text%
-%   \else%
-%      \expandafter%
-%      \mbox%
-%   \fi%
-% }
 
 \makeatletter
 \newcommand{\linedot}[1]{\dot{\overline{#1}}}
@@ -971,27 +980,28 @@
 \newcommand{\ndim}{\mathop{n_{\operator@font dim}}}
 \newcommand{\diag}{\mathop{\operator@font diag}}
 \newcommand{\veci}[1]{#1_1,\ldots,#1_n}
-\newcommand{\dV}{\mkern\medmuskip dV}
-\newcommand{\dA}{\mkern\medmuskip dA}
-\newcommand{\dS}{\mkern\medmuskip dS}
-\newcommand{\dx}{\mkern\medmuskip dx}
-\newcommand{\jumpl}{\mathopen{[\mkern-2.5mu[}}
-\newcommand{\jumpr}{\mathclose{]\mkern-2.5mu]}}
+\newcommand{\dV}{\mkern\medmuskip \Ud V}
+\newcommand{\dv}{\mkern\medmuskip \Ud v}
+\newcommand{\dA}{\mkern\medmuskip \Ud A}
+\newcommand{\da}{\mkern\medmuskip \Ud a}
+\newcommand{\dS}{\mkern\medmuskip \Ud S}
+\newcommand{\dx}{\mkern\medmuskip \Ud x}
+\newcommand{\dt}{\mkern\medmuskip \Ud t}
+\newcommand{\dbrl}{\mathopen{[\mkern-2.5mu[}}
+\newcommand{\dbrr}{\mathclose{]\mkern-2.5mu]}}
 \newcommand{\Abs}[1]{\left|#1\right|}
 \newcommand{\Norm}[1]{\left\|#1\right\|}
-% \newcommand{\rve}{\textenv{$\cal RVE$}}
-% \newcommand{\rpg}{\textenv{$\cal RPG$}}
-% \newcommand{\ehs}{\textenv{$\cal EHS$}}
-% \newcommand{\so}{\textenv{$\cal SO$}}
-% \newcommand{\mo}{\textenv{$\cal MO$}}
-% \newcommand{\othree}{\textenv{$\cal O$\it(3)\/}}
-% \newcommand{\sothree}{\textenv{$\cal SO$\it(3)\/}}
-% \newcommand{\slthree}{\textenv{$\cal S\mkern-1mu L$\it(3)\/}}
-% \newcommand{\AND}{\quad\textenv{and}\quad}
-% \newcommand{\WITH}{\quad\textenv{with}\quad}
-% \newcommand{\UND}{\quad\textenv{und}\quad}
-% \newcommand{\MIT}{\quad\textenv{mit}\quad}
-% \newcommand{\com}{\quad\textenv{,}\quad}
+\newcommand{\so}{\ensuremath{\cal SO}}
+\newcommand{\rve}{\ensuremath{\cal RVE}}
+\newcommand{\rpg}{\ensuremath{\cal RPG}}
+\newcommand{\ehs}{\ensuremath{\cal EHS}}
+\newcommand{\mo}{\ensuremath{\cal MO}}
+\newcommand{\othree}{\ensuremath{{\cal O}(3)\/}}
+\newcommand{\sothree}{\ensuremath{{\cal SO}(3)\/}}
+\newcommand{\slthree}{\ensuremath{{\cal S\mkern-1mu L}(3)\/}}
+\newcommand{\AND}{\ensuremath{\quad\textup{and}\quad}}
+\newcommand{\WITH}{\ensuremath{\quad\textup{with}\quad}}
+\newcommand{\com}{\ensuremath{\quad\textup{,}\quad}}
 \makeatother
 
 % transpose macros
